Fix margins on default secondary panel elements (extra p tag). Add transition to dark mode, though it doesn't seem to work with flexbox backgrounds.

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@
 }
 
 .init {
+    transition: color 2s ease;
+    transition: background-color 2s ease;
     box-sizing: border-box;
     background-color: var(--background1);
     background-repeat: repeat;
@@ -221,6 +223,7 @@ footer {
 
 #mode {
     font-size: calc(3px + 0.5vw + 0.5vh);
+    margin: 1vh;
 }
 
 #mode:hover {
